--- a/index.html
+++ b/index.html
@@ -1,12 +1,208 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IronSkydive</title>
+
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Star nav -->
+    <nav>
+      <ul>
+        <li><a href="#structure">Day Structure</a></li>
+        <li><a href="#Team">Team</a></li>
+        <li><a href="#Schedule">Schedule</a></li>
+      </ul>
+    </nav>
+    <!-- Finish nav -->
+
+    <!-- Star header -->
+    <header>
+      <h1>
+        <img
+          src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-logo.png"
+          alt="IronSkydive Logo"
+        />
+        IronSkydive
+      </h1>
+      <h2>Let the trip begin</h2>
+      <aside>
+        <i>"The best exoerience of our lives"</i>
+        <p>Ariel Quinones & Gonzalo Manrique, Ironhack Founders</p>
+      </aside>
+    </header>
+    <!-- Finish header -->
+
+    <!-- Star sections -->
+    <!-- section 1 -->
+    <section>
+      <article>
+        <h3><strong>Hello!</strong></h3>
+        <p>Welcome to IronSydive, the best adventure you will ever have.</p>
+        <a href="#">Learn More</a>
+      </article>
+      <article>
+        <h3><strong>About us</strong></h3>
+        <p>
+          We like a lot programming websites, but we also love to practice
+          sprot.
+        </p>
+        <a href="#">Watch video</a>
+      </article>
+      <article>
+        <h3><strong>Wanna join?</strong></h3>
+        <p>Join our fitness program to be in good shape while learning.</p>
+        <a href="#">Registre</a>
+      </article>
+    </section>
+    <!-- section 2 -->
+    <section>
+      <article>
+        <img
+          src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-training.png"
+          alt="Trainin"
+        />
+        <h3><strong>1. Training</strong></h3>
+        <div>
+          We teach all the necessary things to jump from the plane without any
+          kind of problem.
+        </div>
+      </article>
+      <article>
+        <img
+          src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-get-ready.png"
+          alt="Get ready"
+        />
+        <h3><strong>2. Get ready</strong></h3>
+        <div>
+          You are already prepared, you just need the suit and a parachute. All
+          size available.
+        </div>
+      </article>
+      <article>
+        <img
+          src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-fly.png"
+          alt="Fly"
+        />
+        <h3><strong>3. Fly</strong></h3>
+        <div>
+          You are ready, and the plane is waiting for us in the hangar. Let's
+          fly!
+        </div>
+      </article>
+      <article>
+        <img
+          src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironskydive-jump.png"
+          alt="Jump"
+        />
+        <h3><strong>4. Jump!</strong></h3>
+        <div>
+          You have done the most complicated. Just one step left... jump!
+        </div>
+      </article>
+    </section>
+    <!-- section 3 -->
+    <section>
+      <h3>Team</h3>
+      <p>
+        Our team collectively has 75 years of experience. Odds are, when yuo
+        jump out the plane with these professionals, you won't go splat.
+      </p>
+      <div>
+        <article>
+          <h4>Harold Rothstein</h4>
+          <img
+            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_c18b1c463b80090894237a262dfdfbad.jpg"
+            alt="Harold Rothstein"
+          />
+        </article>
+        <hr />
+        <article>
+          <h4>Susan Phillips</h4>
+          <img
+            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_a18d6123a7c8e75f7e70a4e59b941093.jpg"
+            alt="Susan Phillips"
+          />
+        </article>
+        <hr />
+        <article>
+          <h4>Taylor Roberts</h4>
+          <img
+            src="https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/upload_7104a331530d1b0611da55093b7dc421.jpg"
+            alt="Taylor Roberts"
+          />
+        </article>
+      </div>
+    </section>
+    <!-- section 4 -->
+    <section>
+      <h3>Schedule</h3>
+      <table style="width: 100%">
+        <thead>
+          <th>Time</th>
+          <th>Monday</th>
+          <th>Tuesday</th>
+          <th>Wednesday</th>
+          <th>Thursday</th>
+          <th>Friday</th>
+          <th>Saturday</th>
+        </thead>
+        <tbody>
+          <tr>
+            <td>9:00am - 11:00am</td>
+            <td></td>
+            <td></td>
+            <td>x</td>
+            <td></td>
+            <td>x</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>12:00pm - 2:00pm</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>x</td>
+            <td>x</td>
+          </tr>
+          <tr>
+            <td>3:00pm - 5:00pm</td>
+            <td></td>
+            <td></td>
+            <td>x</td>
+            <td>x</td>
+            <td>x</td>
+            <td>x</td>
+          </tr>
+        </tbody>
+      </table>
+      <h3>Schedule a Time Slot</h3>
+    </section>
+    <!-- Finish sections -->
+
+    <!-- Start Footer -->
+    <footer>
+      <h5>Contact Information</h5>
+      <address>
+        IronSkydive <br />33 Rue la Fayette,<br />75009 París,<br />France<br />+33
+        (0) 619 193 088
+      </address>
+      <h5>Follow Us</h5>
+      <ul>
+        <li><a href="#" target="_blank"> Twitter</a></li>
+        <li><a href="#" target="_blank"> Facebook</a></li>
+        <li><a href="#" target="_blank"> Instagram</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
